--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,9 @@ django = "^5.1.1"
 python-dotenv = "^1.0.1"
 psycopg2-binary = "^2.9.9"
 djangorestframework-simplejwt = "^5.3.1"
+drf-yasg = "^1.21.7"
+pillow = "^10.4.0"
+djangorestframework = "^3.15.2"
 
 
 [build-system]
