--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ djangorestframework-simplejwt = "^5.3.1"
 drf-yasg = "^1.21.7"
 pillow = "^10.4.0"
 djangorestframework = "^3.15.2"
+django-cors-headers = "^4.4.0"
 
 
 [build-system]
