--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ djangorestframework = "^3.15.2"
 django-cors-headers = "^4.4.0"
 coreapi = "^2.3.3"
 setuptools = "^75.1.0"
+django-filter = "^24.3"
 
 
 [build-system]
