--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,7 +10,7 @@ services:
     expose:
       - '5432'
     volumes:
-      - pg_data:/var/lib/postgresql/data
+      - api_data:/var/lib/postgresql/data
     healthcheck:
       test: [ 'CMD-SHELL', '-c', 'pg_isready -U $POSTGRES_USER -d $POSTGRES_DB' ]
       interval: 1s
@@ -32,4 +32,4 @@ services:
       - .env
 
 volumes:
-  pg_data:
+  api_data:
