--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ django-cors-headers = "^4.4.0"
 coreapi = "^2.3.3"
 setuptools = "^75.1.0"
 django-filter = "^24.3"
+flake8 = "^7.1.1"
 
 
 [build-system]
