--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,3 @@
-version: '3'
-
 services:
 
   db:
@@ -22,7 +20,7 @@ services:
     tty: true
     ports:
       - '8000:8000'
-    command: sh -c 'python manage.py migrate && python manage.py runserver 0.0.0.0:8000'
+    command: sh -c 'python3 manage.py migrate && python3 manage.py collectstatic --noinput && gunicorn API_for_library_management.wsgi:application --bind 0.0.0.0:8000 --workers 3'
     depends_on:
       db:
         condition: service_healthy
@@ -30,6 +28,17 @@ services:
       - .:/app
     env_file:
       - .env
+
+  nginx:
+    image: nginx
+    restart: on-failure
+    ports:
+      - '80:80'
+    volumes:
+      - .:/app
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf  # Ваш файл конфигурации
+    depends_on:
+      - app  # Зависимость от приложения, чтобы оно было доступно
 
 volumes:
   api_data:
