--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name mer1d1an.ru www.mer1d1an.ru;  # Замените localhost на ваш домен
+    server_name mer1d1an.ru;  # Замените localhost на ваш домен
 
     # Обслуживание статических файлов
     location /static/ {
